--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,6 +1,48 @@
-h1 {
-  font-family: "Lemon", cursive;
+:root {
+  --branding-color: #f9f7fe;
+  --h-font-family: "Lemonada", cursive;
+  --default-font-family: "Lemon", cursive;
+  --btn-bg-color: #6c63ff;
 }
-h2 {
-  font-family: "Lemonada", cursive;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: black;
+  font-family: var(--h-font-family);
+  font-weight: bold;
+  margin: 0;
+}
+h1 {
+  font-size: 80px;
+}
+.hero h2 {
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
+}
+p {
+  font-family: var(--default-font-family);
+  font-weight: normal;
+}
+.hero {
+  background-color: var(--branding-color);
+  text-align: center;
+  padding: 160px 20px;
+  margin: 0;
+}
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+}
+.btn-branding {
+  background-color: var(--btn-bg-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
