--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -5,6 +5,9 @@
   --btn-bg-color: #6c63ff;
   --btn-color: #6c63ff;
 }
+body {
+  font-family: var(--default-font-family);
+}
 h1,
 h2,
 h3,
@@ -27,7 +30,6 @@ h6 {
   line-height: 2;
 }
 p {
-  font-family: var(--default-font-family);
   font-weight: normal;
 }
 .hero {
@@ -45,8 +47,10 @@ p {
   border-radius: 4px;
   color: white;
   font-size: 18px;
+  font-weight: normal;
   line-height: 27px;
   padding: 15px 30px;
+  transition: all 200ms ease-in-out;
 }
 .btn-branding-outline {
   color: var(--btn-color);
@@ -66,9 +70,34 @@ p {
   font-size: 16px;
   line-height: 30px;
 }
-img {
+.content img {
   padding: 40px;
   background-color: var(--primary-color);
+}
+.about-me {
+  padding: 80px 20px;
+}
+.intro {
+  margin: 60px 30px;
+}
+.about-me .intro h1 {
+  font-size: 64px;
+  font-weight: 600;
+  line-height: 80px;
+}
+.about-me .intro h2 {
+  font-family: var(--default-font-family);
+  font-weight: 100;
+  font-size: 20px;
+}
+.about-me .intro p {
+  font-size: 14px;
+  line-height: 2;
+  text-align: justify;
+}
+.about-me img {
+  max-width: 80%;
+  margin-left: 60px;
 }
 @media (max-width: 960px) {
   .description {
@@ -83,5 +112,15 @@ img {
   }
   .btn-branding-outline {
     width: 100%;
+  }
+  .intro {
+    text-align: center;
+    margin: 20px;
+  }
+  .about-me img {
+    margin: 0 auto;
+    display: block;
+    max-width: 100%;
+    margin-top: 20px;
   }
 }
